-upload the previous version(alternative version from minxuan lin) to deliverable 5 git hub repo. -add techniques button on home page -add teniques page,cutting page & steaming page -update steaming page information. -adjust awkward padding in all techniques pages. -replacing <center> function with a class which contained text-align: center;(<center> no longer valid in html5) -fix <img> warning which might cause issues by changing the space " "in image source's name to underline"_"

--- a/css/alt.css
+++ b/css/alt.css
@@ -148,3 +148,16 @@ height:150px;
   right:10%;
 
 }
+
+/*techniques__format*/
+.techniques__format h1 {
+  text-align: center;
+}
+.techniques__format {
+  padding: 5px;
+  /*overflow: scroll;*/
+}
+
+.techniques__home_format {
+  text-align: center;
+}
